# Sentinel

./: .env.example  .gitignore  LICENSE  README.md  install.ps1  pyproject.toml  run.bat  run.ps1  update.bat  update.ps1
app/: main.py  middleware.py
app/api/: backup.py  channel.py  follow.py  image_meta.py  saved.py  settings.py  tags.py  version.py
app/backup/: __init__.py  downloader.py  events.py  media.py  queue.py  service.py  worker.py
app/db/: __init__.py  engine.py  models.py  repository.py
app/image_meta/: fetcher.py  keys.py  parser.py  service.py  validation.py
app/llm/: analyze.py  client.py  embedding.py  link_classifier.py  service.py  update_detector.py  version.py
app/saved/: library.py  library_storage.py  service.py  storage.py  tags.py  worker.py
app/scraper/arca/: __init__.py  channel.py  client.py  models.py  parser.py
docs/superpowers/plans/: 2026-04-18-arca-scraper.md  (+5 more)
scripts/: import_library.py  refresh_authors.py
tests/: test_middleware.py
tests/api/: test_backup.py  test_backup_history.py  test_channel.py  test_image_meta.py  test_saved.py  test_tags.py  test_upload_chunked.py
tests/backup/: test_events.py  test_integration.py  test_media.py  test_queue.py  test_service.py  test_worker.py
tests/db/: test_engine.py  test_models.py  test_repository.py
tests/image_meta/: test_parser.py  test_service.py
tests/saved/: test_library.py  test_library_storage.py  test_service.py  test_storage.py  test_tags.py  test_worker.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/api/: client.ts  (+1 more)
(+38 files in other folders)
